objects/blng__CreditNoteLine__c.object
<CustomObject>
    <fields>
        <fullName>External_ID__c</fullName>
        <description>Used by Data Packs to identify and update records.</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>blng__AllocatedRevenueAmount__c</fullName>
        <label>Revenue Allocation Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>blng__Allocations__c</fullName>
        <inlineHelpText>Amount of this line allocated to invoices. Does not include tax.</inlineHelpText>
        <label>Allocations</label>
        <summarizedField>blng__CreditNoteAllocation__c.blng__Amount__c</summarizedField>
        <summaryFilterItems>
            <field>blng__CreditNoteAllocation__c.blng__Type__c</field>
            <operation>equals</operation>
            <value>Allocation</value>
        </summaryFilterItems>
        <summaryForeignKey>blng__CreditNoteAllocation__c.blng__CreditNoteLine__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>blng__Balance__c</fullName>
        <formula>blng__TotalAmount__c - blng__Allocations__c + blng__Unallocations__c -  blng__Refunds__c - blng__Debits__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Amount that has not yet been allocated</inlineHelpText>
        <label>Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>blng__BaseCurrencyAmount__c</fullName>
        <label>Base Currency Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>blng__BaseCurrencyFXDate__c</fullName>
        <label>Base Currency FX Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>blng__BaseCurrencyFXRate__c</fullName>
        <label>Base Currency FX Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>blng__BaseCurrency__c</fullName>
        <label>Base Currency</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blng__BillToAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bill To Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Credit Note Lines</relationshipLabel>
        <relationshipName>BillToAccountCreditNoteLines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__BillToContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bill To Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Credit Note Lines</relationshipLabel>
        <relationshipName>BillToContactCreditNoteLines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__BillingFinanceBook__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billing Finance Book</label>
        <referenceTo>blng__FinanceBook__c</referenceTo>
        <relationshipLabel>Credit Note Lines</relationshipLabel>
        <relationshipName>BillingFinanceBookCreditNoteLines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__BillingGLRule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billing GL Rule</label>
        <referenceTo>blng__GLRule__c</referenceTo>
        <relationshipLabel>Credit Note Lines</relationshipLabel>
        <relationshipName>BillingGLRuleCreditNoteLines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__BillingGLTreatment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billing GL Treatment</label>
        <referenceTo>blng__GLTreatment__c</referenceTo>
        <relationshipLabel>Credit Note Lines</relationshipLabel>
        <relationshipName>BillingGLTreatmentCreditNoteLines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__BillingRule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billing Rule</label>
        <referenceTo>blng__BillingRule__c</referenceTo>
        <relationshipLabel>Credit Note Lines</relationshipLabel>
        <relationshipName>BillingRuleCreditNoteLines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__BillingTreatment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billing Treatment</label>
        <referenceTo>blng__BillingTreatment__c</referenceTo>
        <relationshipLabel>Credit Note Lines</relationshipLabel>
        <relationshipName>BillingTreatmentCreditNoteLines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__CalculateTax__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Calculate Tax?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>blng__CreditNoteLineDate__c</fullName>
        <label>Credit Note Line Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>blng__CreditNote__c</fullName>
        <label>Credit Note</label>
        <referenceTo>blng__CreditNote__c</referenceTo>
        <relationshipName>CreditNoteCreditLines</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>blng__Debits__c</fullName>
        <label>Debits</label>
        <summarizedField>blng__DebitNoteAllocationCreditNoteLine__c.blng__Amount__c</summarizedField>
        <summaryFilterItems>
            <field>blng__DebitNoteAllocationCreditNoteLine__c.blng__Type__c</field>
            <operation>equals</operation>
            <value>Allocation</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>blng__DebitNoteAllocationCreditNoteLine__c.blng__Unallocated__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>blng__DebitNoteAllocationCreditNoteLine__c.blng__CreditNoteLine__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>blng__EffectiveTaxDate__c</fullName>
        <label>Effective Tax Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>blng__EndDate__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>blng__FinancePeriod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Finance Period</label>
        <referenceTo>blng__FinancePeriod__c</referenceTo>
        <relationshipLabel>Credit Note Lines</relationshipLabel>
        <relationshipName>FinancePeriodCreditNoteLines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__ImpactAmount__c</fullName>
        <formula>-  blng__TotalAmount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Impact Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>blng__InvoiceLine__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invoice Line</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Draft Invoice Lines would not be available</errorMessage>
            <filterItems>
                <field>blng__InvoiceLine__c.blng__InvoiceLineStatus__c</field>
                <operation>notEqual</operation>
                <value>Draft</value>
            </filterItems>
            <infoMessage>Draft Invoice Lines would not be available</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>blng__InvoiceLine__c</referenceTo>
        <relationshipLabel>Credit Note Lines</relationshipLabel>
        <relationshipName>InvoiceLineCreditNoteLines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__LegalEntityReference__c</fullName>
        <externalId>true</externalId>
        <label>LegalEntityReference</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blng__LegalEntity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Legal Entity</label>
        <referenceTo>blng__LegalEntity__c</referenceTo>
        <relationshipLabel>Credit Note Lines</relationshipLabel>
        <relationshipName>LegalEntityCreditNoteLines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__NetAllocations__c</fullName>
        <formula>blng__Allocations__c  -  blng__Unallocations__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Allocations</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>blng__Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>blng__OverrideInitialRevenueEndDate__c</fullName>
        <label>Override Initial Revenue End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>blng__OverrideInitialRevenueStartDate__c</fullName>
        <label>Override Initial Revenue Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>blng__ProductName__c</fullName>
        <label>Product Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blng__Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipName>CreditNoteLines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__RefundsAllocations__c</fullName>
        <inlineHelpText>Amount of this line allocated to refunds</inlineHelpText>
        <label>Refunds (Allocations)</label>
        <summarizedField>blng__RefundLineCreditNoteLine__c.blng__Amount__c</summarizedField>
        <summaryFilterItems>
            <field>blng__RefundLineCreditNoteLine__c.blng__Type__c</field>
            <operation>equals</operation>
            <value>Allocation</value>
        </summaryFilterItems>
        <summaryForeignKey>blng__RefundLineCreditNoteLine__c.blng__CreditNoteLine__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>blng__RefundsUnallocations__c</fullName>
        <inlineHelpText>Amount of this that has been unallocated from refunds</inlineHelpText>
        <label>Refunds (Unallocations)</label>
        <summarizedField>blng__RefundLineCreditNoteLine__c.blng__Amount__c</summarizedField>
        <summaryFilterItems>
            <field>blng__RefundLineCreditNoteLine__c.blng__Type__c</field>
            <operation>equals</operation>
            <value>Unallocation</value>
        </summaryFilterItems>
        <summaryForeignKey>blng__RefundLineCreditNoteLine__c.blng__CreditNoteLine__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>blng__Refunds__c</fullName>
        <formula>blng__RefundsAllocations__c - blng__RefundsUnallocations__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Amount that has been refunded from this line</inlineHelpText>
        <label>Refunds</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>blng__RevenueExpectedAmount__c</fullName>
        <label>Revenue Expected Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>blng__RevenueLiabilityAmount__c</fullName>
        <label>Revenue Liability Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>blng__RevenueMostLikelyAmount__c</fullName>
        <label>Revenue Most Likely Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>blng__RevenueScheduleStatus__c</fullName>
        <label>Revenue Schedule Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>blng__RevenueScheduleStatus</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>blng__StartDate__c</fullName>
        <inlineHelpText>Start date of the credit line term</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>blng__Status__c</fullName>
        <inlineHelpText>Status of the credit memo. Can be: Draft Posted Canceled</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>blng__PostingStatus</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>blng__Subtotal__c</fullName>
        <inlineHelpText>Unrefunded amount of the credit note. Does not include tax. Equals Amount - Refund Amount</inlineHelpText>
        <label>Subtotal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>blng__TaxAmount__c</fullName>
        <inlineHelpText>Tax amount on this line</inlineHelpText>
        <label>Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>blng__TaxCity__c</fullName>
        <inlineHelpText>For use in tax calculations. Destination city for this product.</inlineHelpText>
        <label>Tax City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blng__TaxCode__c</fullName>
        <inlineHelpText>Tax Code assigned to this line.</inlineHelpText>
        <label>Tax Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blng__TaxCountry__c</fullName>
        <inlineHelpText>For use in tax calculations. Destination city for this product.</inlineHelpText>
        <label>Tax Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blng__TaxEngine__c</fullName>
        <inlineHelpText>Tax Engine that was used to calculate tax</inlineHelpText>
        <label>Tax Engine</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>blng__TaxEngine</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>blng__TaxErrorMessage__c</fullName>
        <label>Tax Error Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blng__TaxGLRule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tax GL Rule</label>
        <referenceTo>blng__GLRule__c</referenceTo>
        <relationshipLabel>Credit Note Lines (Tax GL Rule)</relationshipLabel>
        <relationshipName>TaxGLRuleCreditNoteLines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__TaxGLTreatment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tax GL Treatment</label>
        <referenceTo>blng__GLTreatment__c</referenceTo>
        <relationshipLabel>Credit Note Lines (Tax GL Treatment)</relationshipLabel>
        <relationshipName>TaxGLTreatmentCreditNoteLines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__TaxPercentageApplied__c</fullName>
        <label>Tax Percentage Applied</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>blng__TaxRule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tax Rule</label>
        <referenceTo>blng__TaxRule__c</referenceTo>
        <relationshipLabel>Credit Note Lines</relationshipLabel>
        <relationshipName>TaxRuleCreditNoteLines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__TaxState__c</fullName>
        <inlineHelpText>For use in tax calculations. Destination city for this product.</inlineHelpText>
        <label>Tax State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blng__TaxStatus__c</fullName>
        <inlineHelpText>Status of tax calculation. Can be: Pending In Process Completed Canceled Error</inlineHelpText>
        <label>Tax Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>blng__LineTaxStatus</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>blng__TaxStreet2__c</fullName>
        <label>Tax Street 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blng__TaxStreet__c</fullName>
        <inlineHelpText>For use in tax calculations. Destination city for this product.</inlineHelpText>
        <label>Tax Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blng__TaxTreatment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tax Treatment</label>
        <referenceTo>blng__TaxTreatment__c</referenceTo>
        <relationshipLabel>Credit Note Lines</relationshipLabel>
        <relationshipName>TaxTreatmentCreditNoteLines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__TaxZipCode__c</fullName>
        <inlineHelpText>For use in tax calculations. Destination city for this product.</inlineHelpText>
        <label>Tax Zip Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blng__TotalAmount__c</fullName>
        <inlineHelpText>Total Amount should be same as invoice line amount</inlineHelpText>
        <label>Total Amount (With Tax)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>blng__Unallocations__c</fullName>
        <inlineHelpText>Amount of this line that has been unallocated from invoices.</inlineHelpText>
        <label>Unallocations</label>
        <summarizedField>blng__CreditNoteAllocation__c.blng__Amount__c</summarizedField>
        <summaryFilterItems>
            <field>blng__CreditNoteAllocation__c.blng__Type__c</field>
            <operation>equals</operation>
            <value>Unallocation</value>
        </summaryFilterItems>
        <summaryForeignKey>blng__CreditNoteAllocation__c.blng__CreditNoteLine__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Credit Note Line</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Line Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Credit Note Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>